# monty-near-vm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
deployer/: Cargo.toml
deployer/src/: lib.rs
examples/: test_local.rs
src/: lib.rs
tests/: Cargo.toml
tests/src/: deploy_testnet.rs  run_testnet.rs  sandbox.rs  test_deploy_direct.rs
